<resources>
    <string name="app_name">Eventr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="new_event">New Event</string>
    <string name="name_your_event">Name your event</string>
    <string name="location">Location</string>
    <string name="whos_hosting">Who\'s hosting?</string>
    <string name="twenty_one_plus">21+</string>
    <string name="alcohol">Alcohol</string>
    <string name="rave">Rave</string>
    <string name="casual">Casual</string>
    <string name="sports">Sports</string>
    <string name="extra_tags">Add extra tags separated by commas</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="name_and_location_required">You must enter an event name and location</string>
    <string name="event_name_required">You must enter an event name</string>
    <string name="location_required">You must enter a location</string>
    <string name="saved_successfully">Saved succesfully</string>
</resources>
