<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.estebanzapata.eventr.NewEventActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_your_event" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/host_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/whos_hosting" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/location_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/host_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/am_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:id="@+id/twenty_one_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_one_plus" />

        <CheckBox
            android:id="@+id/alcohol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/twenty_one_plus"
            android:text="@string/alcohol" />

        <CheckBox
            android:id="@+id/rave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/twenty_one_plus"
            android:text="@string/rave" />

        <CheckBox
            android:id="@+id/casual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/twenty_one_plus"
            android:layout_toRightOf="@id/rave"
            android:text="@string/casual" />

        <CheckBox
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rave"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rave"
            android:layout_toRightOf="@id/sports"
            android:text="@string/birthday" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/extra_tags_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sports"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/extra_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/extra_tags" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

</RelativeLayout>
